[tool.poetry]
name = "clipo ai"
version = "0.1.0"
description = "assignment"
authors = ["Vishnu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Flask-JWT-Extended = "^4.6.0"
pymongo = "^4.7.1"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
